Outing Update, submit redirections

--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -48,6 +48,9 @@
         </button>
     </div>
 
+    {# skip the rendering of suppress button, not needed here #}
+    {% do outingCreationForm.suppress.setRendered() %}
+
     {{ form_end(outingCreationForm) }}
 </div>
 {% endblock %}
