Added unregister to outings feature

--- a/public/assets/css/variables.css
+++ b/public/assets/css/variables.css
@@ -6,5 +6,6 @@
     --primary-color: #0052cc;
     --secondary-color: #FF0096;
     --error-color: #ff2229;
+    --success-color: #32DE8A;
     --light-color-1: #D0D0DF;
 }
