--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -4,6 +4,6 @@
     <div>
         <h1>Administration</h1>
         <p>Bienvenue dans l'interface d'administration</p>
-        <a href="{{ path('temporary') }}">Retour au site</a>
+        <a href="{{ path('accueil') }}">Retour au site</a>
     </div>
 {% endblock %}
