Outing Update, fix Outing Repository

--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -6,7 +6,7 @@
     <script>
         function confirmCancel(){
             if(confirm('Souhaitez-vous vraiment annuler l\'opération ?')){
-                window.location.href = '{{ path('temporary') }}';
+                window.location.href = '{{ path('accueil') }}';
             }
         }
     </script>
