--- a/templates/fragments/_navbar.html.twig
+++ b/templates/fragments/_navbar.html.twig
@@ -7,8 +7,13 @@
             <ul>
                 <li><a href="{{ path('accueil') }}">Accueil</a></li>
                 <li><a href="{{ path('show_profile', { username: app.user.nickName }) }}">Mon profil</a></li>
-                <li><a href="">Villes</a></li>
-                <li><a href="">Campus</a></li>
+                {% if app.user.isAdmin %}
+                    {% set townUrl = ea_url().setController('App\\Controller\\Admin\\TownCrudController') %}
+                    {% set campusUrl = ea_url().setController('App\\Controller\\Admin\\CampusCrudController') %}
+                    <li><a href="{{ path('admin') }}">Panneau d'administration</a></li>
+                    <li><a href="{{ townUrl }}">Villes</a></li>
+                    <li><a href="{{ campusUrl }}">Campus</a></li>
+                {% endif %}
                 <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
             </ul>
         {% endif %}
