--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome to the Dream Team!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" type="image/svg+xml" href="{{ asset('assets/images/favicon.svg') }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         {# Google Fonts #}
         <link rel="preconnect" href="https://fonts.googleapis.com">
