--- a/templates/admin/upload_csv.html.twig
+++ b/templates/admin/upload_csv.html.twig
@@ -1,4 +1,5 @@
-{% extends '@EasyAdmin/layout.html.twig' %}
+{% extends 'admin/dashboardBase.html.twig' %}
+
 {% block page_title %}
     Ajout d'utilisateurs par fichier CSV
 {% endblock %}
